--- a/package.json
+++ b/package.json
@@ -14,26 +14,13 @@
   "author": "Denis Gribanov <2517.2la@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "babel-register": "^6.26.0",
-    "chai": "^4.2.0",
-    "css-loader": "^2.1.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "mocha": "^6.0.2",
-    "mocha-webpack": "^1.1.0",
-    "node-notifier": "^5.4.0",
-    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-serve": "^1.0.1",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "rollup-plugin-typescript": "^1.0.0",
+    "rollup-plugin-typescript2": "^0.19.3",
+    "tslib": "^1.9.3",
+    "typescript": "^3.3.3333"
   },
   "dependencies": {
     "rollup": "^1.4.0"
