Fix rollup problems, move on yarn

--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
   "devDependencies": {
     "docsify-cli": "^4.3.0",
     "pre-push": "^0.1.1",
-    "rollup": "^1.7.0",
+    "rollup": "^2.7.6",
     "rollup-plugin-cleaner": "^0.2.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-tslint": "^0.2.2",
-    "rollup-plugin-typescript2": "^0.19.3",
+    "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-uglify": "^6.0.2",
+    "tslib": "^1.11.1",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.3333",
+    "typescript": "^3.8.3",
     "vuepress": "^1.0.0-alpha.44"
   },
   "prepush": "tslint",
